objects/Object__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>confirmation</label>
        <type>Checkbox</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OBJ-{0000}</displayFormat>
        <label>Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>